# vipere_search

./: .gitignore  app.py  auto-imports.d.ts  components.d.ts  index.html  netlify.toml  package.json  pyproject.toml  requirements.txt  tsconfig.json  unocss.config.ts  vite.config.ts
src/: App.vue  index.ts
src/components/: Footer.vue  Ico.vue  Loading.vue  Search.vue
src/layouts/: default.vue
src/pages/: index.vue
