[tool.poetry]
name = "vipere-search"
version = "0.1.0"
description = "VueJS FastAPI and AWS Lambda"
authors = ["Oscar Bahamonde <ob@obahamonde.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
bs4 = "^0.0.1"
aiohttp = "^3.8.1"
mangum = "^0.15.1"

[tool.poetry.dev-dependencies]
boto3 = "^1.24.70"
rich = "^12.5.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
